--- a/css/index.css
+++ b/css/index.css
@@ -152,3 +152,14 @@ div > h3 {
     position: relative;
     bottom: 380px;
 }
+
+@media (max-width: 720px) {
+    nav {
+        flex-direction: column;
+        margin: 50px 0;
+    }
+    .intro-section{
+        flex-direction: column;
+        margin: 0 100px;
+    }
+}
